<resources>
    <string name="app_name">Changing</string>
    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="tuesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
    <string name="data1">已完成天数/目标天数: </string>
    <string name="data2">目前连续天数/最大连续天数: </string>
    <string name="data3">/</string>
</resources>
